sorido0 nuevos estilos

--- a/index.html
+++ b/index.html
@@ -49,36 +49,20 @@
   <!-- fin nuevo nav-->
 
 
-  <!-- <nav class="primera-seccion">
-    <div id="barra-navegacion">
-      <h3 id="logo">IT <span style="color: #3d72b4;">UP</span></h3>
-      <div>
-        <a href="index.html">Inicio</a>
-        <a href="nuestroinstituto.html">Nuesto Instituto</a>
-        <a href="contacto.html">Contacto</a>
-      </div>
-    </div>
-    <div id="primera-seccion-contenido">
-      <hr>
-    </div>
-  </nav> -->
+                              <!-- <nav class="primera-seccion">
+                                <div id="barra-navegacion">
+                                  <h3 id="logo">IT <span style="color: #3d72b4;">UP</span></h3>
+                                  <div>
+                                    <a href="index.html">Inicio</a>
+                                    <a href="nuestroinstituto.html">Nuesto Instituto</a>
+                                    <a href="contacto.html">Contacto</a>
+                                  </div>
+                                </div>
+                                <div id="primera-seccion-contenido">
+                                  <hr>
+                                </div>
+                              </nav> -->
 
-  <!--segunda-seccion-->
-
-
-  <div id="segunda-seccion">
-    <p class="frase">INSTITUTO TECNOLOGICO UNION PANAMERICANA</p>
-
-    <div class="redes">
-      <a href="https://web.facebook.com/instecupa" target="_blank"><img alt="Siguenos en Facebook" src="facebok.png"
-          width=48 height=48 /></a>
-
-      <a href="https://www.instagram.com/instecupa/?hl=es" target="_blank"><img alt="Siguenos en Blogger"
-          src="instagram1.png" width=48 height=48 /></a>
-
-    </div>
-    <p class="frase">Siguenos en nuestras redes sociales.</p>
-  </div>
 
   <!--tercera-seccion-->
   <div id="tercera-seccion">
@@ -86,39 +70,51 @@
       <h2>Eventos destacados</h2>
       <hr>
     </div>
+
     <div id="container-tercera-seccion">
-      <div class="img-tercera">
-        <img src="100.jpg" alt="">
-        <h6>Inauguracion Laboratorio</h6>
-        <p>Inauguracion del nuevo laboratoriao de informatica encabezado por el director de la Regional 15 y el director
-          del DGTIC, nuestro centro esta muy agradecido con El Ministerio de Educacion.</p>
-        <a href="nuestroinstituto.html" class="btn-verde">Mas informacion</a>
+
+      <div class="grid">
+
+
+        <!-- renombre los contenedores de las imagenes para que sean de tamaño igual a la imagen y tener una sola clase para todos. -->
+        <!-- antes img-tercera ahora container-img -->
+        <div class="container-img">
+          <img src="100.jpg" alt="">
+          <h6>Inauguracion Laboratorio</h6>
+          <p>Inauguracion del nuevo laboratoriao de informatica encabezado por el director de la Regional 15 y el
+            director
+            del DGTIC, nuestro centro esta muy agradecido con El Ministerio de Educacion.</p>
+          <a href="nuestroinstituto.html" class="btn-verde">Mas informacion</a>
+        </div>
+
+        <div class="container-img">
+          <img src="enf.jpg" alt="">
+          <h6>Dia del enfermero</h6>
+          <p>12 de Mayo Dia Internacional de la Enfermeria, y asi nuestro Instituto celebro ese dia dandole honor a
+            todos
+            los enfermeros del mundo en especial a los de nuestro Instituto Union Panamericana.</p>
+          <a href="nuestroinstituto.html" class="btn-verde">Mas informacion</a>
+        </div>
+
+        <div class="container-img">
+          <img src="cogre.jpg" alt="">
+          <h6>Visita al Congreso Nacional</h6>
+          <p>Los estudiantes de nuestro Instituto recibieron una invitacion del Senado de la Republica para asistir al
+            Congreso Nacional. </p>
+          <a href="nuestroinstituto.html" class="btn-verde">Mas informacion</a>
+        </div>
+
+        <div class="container-img">
+          <img src="2.jpg" alt="">
+          <h6>Dia de la Independecia</h6>
+          <p>Llenos de orgullo nuestro centro celebro el dia de nuestra Independecia dandole honor a nuestros heroes
+            patrios.</p>
+          <a href="nuestroinstituto.html" class="btn-verde">Mas informacion</a>
+
+        </div>
       </div>
 
-      <div class="img-tercera">
-        <img src="enf.jpg" alt="">
-        <h6>Dia del enfermero</h6>
-        <p>12 de Mayo Dia Internacional de la Enfermeria, y asi nuestro Instituto celebro ese dia dandole honor a todos
-          los enfermeros del mundo en especial a los de nuestro Instituto Union Panamericana.</p>
-        <a href="nuestroinstituto.html" class="btn-verde">Mas informacion</a>
-      </div>
-      <div class="img-cuarta">
-        <img src="cogre.jpg" alt="">
-        <h6>Visita al Congreso Nacional</h6>
-        <p>Los estudiantes de nuestro Instituto recibieron una invitacion del Senado de la Republica para asistir al
-          Congreso Nacional. </p>
-        <a href="nuestroinstituto.html" class="btn-verde">Mas informacion</a>
-      </div>
-
-      <div class="img-cuarta">
-        <img src="2.jpg" alt="">
-        <h6>Dia de la Independecia</h6>
-        <p>Llenos de orgullo nuestro centro celebro el dia de nuestra Independecia dandole honor a nuestros heroes
-          patrios.</p>
-        <a href="nuestroinstituto.html" class="btn-verde">Mas informacion</a>
-      </div>
     </div>
-  </div>
   </div>
 
   <div class="video">
@@ -164,6 +160,23 @@
 
   <!--footer-->
   <footer>
+
+     <!--segunda-seccion-->
+
+
+  <div id="segunda-seccion">
+    <p class="frase">INSTITUTO TECNOLOGICO UNION PANAMERICANA</p>
+
+    <div class="redes">
+      <a href="https://web.facebook.com/instecupa" target="_blank"><img alt="Siguenos en Facebook" src="facebok.png"
+          width=48 height=48 /></a>
+
+      <a href="https://www.instagram.com/instecupa/?hl=es" target="_blank"><img alt="Siguenos en Blogger"
+          src="instagram1.png" width=48 height=48 /></a>
+
+    </div>
+    <p class="frase">Siguenos en nuestras redes sociales.</p>
+  </div>
     <div class="contenedor-footer">
       <div class="content-foo">
         <h4>Telefono</h4>
