--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <nav class="nav-main">
       <div id="barra-navegacion">
         <h3 id="logo">IT <span style="color: #3d72b4;">UP</span></h3>
-        <div> 
+        <div>
           <ul class="nav-menu">
             <li>
               <a href="index.html">Inicio</a>
@@ -49,7 +49,7 @@
   <!-- fin nuevo nav-->
 
 
-                              <!-- <nav class="primera-seccion">
+  <!-- <nav class="primera-seccion">
                                 <div id="barra-navegacion">
                                   <h3 id="logo">IT <span style="color: #3d72b4;">UP</span></h3>
                                   <div>
@@ -81,37 +81,37 @@
         <div class="container-img">
           <img src="100.jpg" alt="">
           <h6>Inauguracion Laboratorio</h6>
-          <p>Inauguracion del nuevo laboratoriao de informatica encabezado por el director de la Regional 15 y el
+          <!-- <p>Inauguracion del nuevo laboratoriao de informatica encabezado por el director de la Regional 15 y el
             director
-            del DGTIC, nuestro centro esta muy agradecido con El Ministerio de Educacion.</p>
+            del DGTIC, nuestro centro esta muy agradecido con El Ministerio de Educacion.</p> -->
           <a href="inaguracion.html" class="btn-verde">Mas informacion</a>
         </div>
 
         <div class="container-img">
           <img src="enf.jpg" alt="">
           <h6>Dia del enfermero</h6>
-          <p>12 de Mayo Dia Internacional de la Enfermeria, y asi nuestro Instituto celebro ese dia dandole honor a
+          <!-- <p>12 de Mayo Dia Internacional de la Enfermeria, y asi nuestro Instituto celebro ese dia dandole honor a
             todos
-            los enfermeros del mundo en especial a los de nuestro Instituto Union Panamericana.</p>
+            los enfermeros del mundo en especial a los de nuestro Instituto Union Panamericana.</p> -->
           <a href="diaenfermero.html" class="btn-verde">Mas informacion</a>
         </div>
 
         <div class="container-img">
           <img src="cogre.jpg" alt="">
           <h6>Visita al Congreso Nacional</h6>
-          <p>Los estudiantes de nuestro Instituto recibieron una invitacion del Senado de la Republica para asistir al
-            Congreso Nacional. </p>
+          <!-- <p>Los estudiantes de nuestro Instituto recibieron una invitacion del Senado de la Republica para asistir al
+            Congreso Nacional. </p> -->
           <a href="congreso.html" class="btn-verde">Mas informacion</a>
         </div>
 
         <div class="container-img">
           <img src="2.jpg" alt="">
           <h6>Dia de la Independecia</h6>
-          <p>Llenos de orgullo nuestro centro celebro el dia de nuestra Independecia dandole honor a nuestros heroes
-            patrios.</p>
+          <!-- <p>Llenos de orgullo nuestro centro celebro el dia de nuestra Independecia dandole honor a nuestros heroes
+            patrios.</p> -->
           <a href="diaindependencia.html" class="btn-verde">Mas informacion</a>
-
         </div>
+
       </div>
 
     </div>
@@ -123,7 +123,7 @@
     <h1>Inaguracion de Area Recreativa</h1>
     <br>
 
-    <iframe height="400" src="https://www.youtube.com/embed/4mtGfCf6EWY" title="YouTube video player" frameborder="0"
+    <iframe class="youtube" height="400" src="https://www.youtube.com/embed/4mtGfCf6EWY" title="YouTube video player" frameborder="0"
       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
       allowfullscreen></iframe>
     <br>
@@ -160,7 +160,7 @@
 
 
 
-     <!--segunda-seccion-->
+  <!--segunda-seccion-->
 
 
   <div id="segunda-seccion">
@@ -175,29 +175,37 @@
     </div>
     <p class="frase">Siguenos en nuestras redes sociales.</p>
     <div class="ubicacion">
-      <iframe
-      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3784.097575192094!2d-69.91162478622728!3d18.479238887433088!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8eaf89cb12dbd4bf%3A0x6674b12986144635!2sLiceo%20Uni%C3%B3n%20Panamericana!5e0!3m2!1ses!2sdo!4v1659109977536!5m2!1ses!2sdo"
-      width="300" height="100" style="border:0;" allowfullscreen="" loading="lazy"
-      referrerpolicy="no-referrer-when-downgrade"></iframe>
+
     </div>
   </div>
   <!--footer-->
   <footer>
-    <div class="contenedor-footer">
-      <div class="content-foo">
+
+
+    <div class="grid-container">
+
+      <div class="footer-contacto">
+        <h2> contacto </h2>
         <h4>Telefono</h4>
-        <p>809-689-5385</p>
-      </div>
-      <div class="content-foo">
+        <p class="footer-p">809-689-5385</p>
+
         <h4>Correo</h4>
-        <p>@gmail.com</p>
+        <p class="footer-p">@gmail.com</p>
       </div>
-      <div class="content-foo">
+
+      <div class="footer-dirrecion">
         <h4>Dirrecion</h4>
-        <p>Pseo De Los Periodistas 53, Miraflores, Santo Domingo</p>
-      <div class="titulo-final">
-          &copy; Kevin Fernandez | Ruddy Araujo
+        <p class="footer-p">Pseo De Los Periodistas 53, Miraflores, Santo Domingo</p>
+        <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3784.097575192094!2d-69.91162478622728!3d18.479238887433088!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8eaf89cb12dbd4bf%3A0x6674b12986144635!2sLiceo%20Uni%C3%B3n%20Panamericana!5e0!3m2!1ses!2sdo!4v1659109977536!5m2!1ses!2sdo"
+        width="300" height="100" style="border:0;" allowfullscreen="" loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
+
+      <div class="copyR">
+        &copy; Kevin Fernandez | Ruddy Araujo | <a href="https://sorido0.netlify.app/" target="_blank"> sorido0 </a>
+      </div>
+
     </div>
   </footer>
 
