--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Instituto Tecnologico Union Panamericana</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <link href="/style/style.css" rel="stylesheet" type="text/css" />
   <link rel="shortcut icon" href="icono.ico" type="image/x-icon">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 
@@ -28,10 +28,10 @@
               <a href="index.html">Inicio</a>
             </li>
             <li>
-              <a href="nuestroinstituto.html">Nuesto Instituto</a>
+              <a href="/pages/nuestroinstituto.html">Nuesto Instituto</a>
             </li>
             <li>
-              <a href="contacto.html">Contacto</a>
+              <a href="/pages/contacto.html">Contacto</a>
             </li>
           </ul>
           <ul class="nav-menu-derecha">
@@ -79,37 +79,37 @@
         <!-- renombre los contenedores de las imagenes para que sean de tamaño igual a la imagen y tener una sola clase para todos. -->
         <!-- antes img-tercera ahora container-img -->
         <div class="container-img">
-          <img src="100.jpg" alt="">
+          <img src="/img/100.jpg" alt="">
           <h6>Inauguracion Laboratorio</h6>
           <!-- <p>Inauguracion del nuevo laboratoriao de informatica encabezado por el director de la Regional 15 y el
             director
             del DGTIC, nuestro centro esta muy agradecido con El Ministerio de Educacion.</p> -->
-          <a href="inaguracion.html" class="btn-verde">Mas informacion</a>
+          <a href="/pages/inaguracion.html" class="btn-verde">Mas informacion</a>
         </div>
 
         <div class="container-img">
-          <img src="enf.jpg" alt="">
+          <img src="/img/enf.jpg" alt="">
           <h6>Dia del enfermero</h6>
           <!-- <p>12 de Mayo Dia Internacional de la Enfermeria, y asi nuestro Instituto celebro ese dia dandole honor a
             todos
             los enfermeros del mundo en especial a los de nuestro Instituto Union Panamericana.</p> -->
-          <a href="diaenfermero.html" class="btn-verde">Mas informacion</a>
+          <a href="/pages/diaenfermero.html" class="btn-verde">Mas informacion</a>
         </div>
 
         <div class="container-img">
-          <img src="cogre.jpg" alt="">
+          <img src="/img/cogre.jpg" alt="">
           <h6>Visita al Congreso Nacional</h6>
           <!-- <p>Los estudiantes de nuestro Instituto recibieron una invitacion del Senado de la Republica para asistir al
             Congreso Nacional. </p> -->
-          <a href="congreso.html" class="btn-verde">Mas informacion</a>
+          <a href="/pages/congreso.html" class="btn-verde">Mas informacion</a>
         </div>
 
         <div class="container-img">
-          <img src="2.jpg" alt="">
+          <img src="/img/2.jpg" alt="">
           <h6>Dia de la Independecia</h6>
           <!-- <p>Llenos de orgullo nuestro centro celebro el dia de nuestra Independecia dandole honor a nuestros heroes
             patrios.</p> -->
-          <a href="diaindependencia.html" class="btn-verde">Mas informacion</a>
+          <a href="/pages/diaindependencia.html" class="btn-verde">Mas informacion</a>
         </div>
 
       </div>
@@ -136,7 +136,7 @@
         <h3>El mejor instituto</h3>
         <hr>
         <p>Con unas instalaciones en las que se combina la modernidad, en nuestra hermosa escuela.</p>
-        <a href="nuestroinstituto.html" class="btn-verde">Mas informacion</a>
+        <a href="/pages/nuestroinstituto.html" class="btn-verde">Mas informacion</a>
       </div>
     </div>
   </div>
@@ -146,16 +146,17 @@
     <div id="quinta-seccion-izquierda">
       <h3>Egresados Panamericano</h3>
       <hr>
-      <p>Un alto porcentaje de nuestros egresados estan en diversas universidades del pais ampliando sus conocimientos.
-      </p>
-      <a href="nuestroinstituto.html" class="btn-verde">Mas informacion</a>
+      <!-- <p>Un alto porcentaje de nuestros egresados estan en diversas universidades del pais ampliando sus conocimientos.
+      </p> -->
+      <!-- <a href="nuestroinstituto.html" class="btn-verde">Mas informacion</a> comente este boto para cambiar la posicion -->
     </div>
     <div id="quinta-seccion-derecha">
-      <img src="3.jpg" alt="">
-      <img src="111.jpg" alt="">
-      <img src="222.jpg" alt="">
-      <img src="333.jpg" alt="">
+      <img src="/img/3.jpg" alt="">
+      <img src="/img/111.jpg" alt="">
+      <img src="/img/222.jpg" alt="">
+      <img src="/img/333.jpg" alt="">
     </div>
+    <a href="nuestroinstituto.html" class="btn-verde" id="btn">Mas informacion</a> 
   </div>
 
 
@@ -167,11 +168,11 @@
     <p class="frase">INSTITUTO TECNOLOGICO UNION PANAMERICANA</p>
 
     <div class="redes">
-      <a href="https://web.facebook.com/instecupa" target="_blank"><img alt="Siguenos en Facebook" src="facebok.png"
+      <a href="https://web.facebook.com/instecupa" target="_blank"><img alt="Siguenos en Facebook" src="/img/facebok.png"
           width=48 height=48 /></a>
 
       <a href="https://www.instagram.com/instecupa/?hl=es" target="_blank"><img alt="Siguenos en Blogger"
-          src="instagram1.png" width=48 height=48 /></a>
+          src="/img/instagram1.png" width=48 height=48 /></a>
     </div>
     <p class="frase">Siguenos en nuestras redes sociales.</p>
     <div class="ubicacion">
@@ -209,7 +210,7 @@
     </div>
   </footer>
 
-  <script src="index.js"></script>
+  <script src="/js/index.js"></script>
 </body>
 
 </html>
