--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Instituto Tecnologico Union Panamericana</title>
-  <link href="/style/style.css" rel="stylesheet" type="text/css" />
+  <link href="./style/style.css" rel="stylesheet" type="text/css" />
   <link rel="shortcut icon" href="icono.ico" type="image/x-icon">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 
