--- a/index.html
+++ b/index.html
@@ -168,11 +168,11 @@
     <p class="frase">INSTITUTO TECNOLOGICO UNION PANAMERICANA</p>
 
     <div class="redes">
-      <a href="https://web.facebook.com/instecupa" target="_blank"><img alt="Siguenos en Facebook" src="/img/facebok.png"
+      <a href="https://web.facebook.com/instecupa" target="_blank"><img alt="Siguenos en Facebook" src="./img/facebok.png"
           width=48 height=48 /></a>
 
       <a href="https://www.instagram.com/instecupa/?hl=es" target="_blank"><img alt="Siguenos en Blogger"
-          src="/img/instagram1.png" width=48 height=48 /></a>
+          src="./img/instagram1.png" width=48 height=48 /></a>
     </div>
     <p class="frase">Siguenos en nuestras redes sociales.</p>
     <div class="ubicacion">
