--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </div>
 
         <div class="container-img">
-          <img src="../img/enf.jpg" alt="">
+          <img src="/img/enf.jpg" alt="">
           <h6>Dia del enfermero</h6>
           <!-- <p>12 de Mayo Dia Internacional de la Enfermeria, y asi nuestro Instituto celebro ese dia dandole honor a
             todos
@@ -97,7 +97,7 @@
         </div>
 
         <div class="container-img">
-          <img src="../img/cogre.jpg" alt="">
+          <img src="./img/cogre.jpg" alt="">
           <h6>Visita al Congreso Nacional</h6>
           <!-- <p>Los estudiantes de nuestro Instituto recibieron una invitacion del Senado de la Republica para asistir al
             Congreso Nacional. </p> -->
@@ -105,7 +105,7 @@
         </div>
 
         <div class="container-img">
-          <img src="../img/2.jpg" alt="">
+          <img src="/img/2.jpg" alt="">
           <h6>Dia de la Independecia</h6>
           <!-- <p>Llenos de orgullo nuestro centro celebro el dia de nuestra Independecia dandole honor a nuestros heroes
             patrios.</p> -->
@@ -169,10 +169,10 @@
       <br>
       <div class="slider">
           <ul>
-              <li><img src="../img/slider3(1).png" alt=""></li>
-              <li><img src="../img/slider2(1).png" alt=""></li>
-              <li><img src="../img/slider1(1).png" alt=""></li>
-              <li><img src="../img/slider44.png" alt=""></li>
+              <li><img src="/img/slider3(1).png" alt=""></li>
+              <li><img src="/img/slider2(1).png" alt=""></li>
+              <li><img src="/img/slider1(1).png" alt=""></li>
+              <li><img src="/img/slider44.png" alt=""></li>
           </ul>
       </div>
     </section>
