--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <!-- renombre los contenedores de las imagenes para que sean de tamaño igual a la imagen y tener una sola clase para todos. -->
         <!-- antes img-tercera ahora container-img -->
         <div class="container-img">
-          <img src="../img/100.jpg" alt="">
+          <img src="./img/100.jpg" alt="">
           <h6>Inauguracion Laboratorio</h6>
           <!-- <p>Inauguracion del nuevo laboratoriao de informatica encabezado por el director de la Regional 15 y el
             director
@@ -88,7 +88,7 @@
         </div>
 
         <div class="container-img">
-          <img src="/img/enf.jpg" alt="">
+          <img src="./img/enf.jpg" alt="">
           <h6>Dia del enfermero</h6>
           <!-- <p>12 de Mayo Dia Internacional de la Enfermeria, y asi nuestro Instituto celebro ese dia dandole honor a
             todos
@@ -105,7 +105,7 @@
         </div>
 
         <div class="container-img">
-          <img src="/img/2.jpg" alt="">
+          <img src="./img/2.jpg" alt="">
           <h6>Dia de la Independecia</h6>
           <!-- <p>Llenos de orgullo nuestro centro celebro el dia de nuestra Independecia dandole honor a nuestros heroes
             patrios.</p> -->
@@ -169,10 +169,10 @@
       <br>
       <div class="slider">
           <ul>
-              <li><img src="/img/slider3(1).png" alt=""></li>
-              <li><img src="/img/slider2(1).png" alt=""></li>
-              <li><img src="/img/slider1(1).png" alt=""></li>
-              <li><img src="/img/slider44.png" alt=""></li>
+              <li><img src="./img/slider3(1).png" alt=""></li>
+              <li><img src="./img/slider2(1).png" alt=""></li>
+              <li><img src="./img/slider1(1).png" alt=""></li>
+              <li><img src="./img/slider44.png" alt=""></li>
           </ul>
       </div>
     </section>
@@ -183,11 +183,11 @@
     <p class="frase">INSTITUTO TECNOLOGICO UNION PANAMERICANA</p>
 
     <div class="redes">
-      <a href="https://web.facebook.com/instecupa" target="_blank"><img alt="Siguenos en Facebook" src="../img/facebok.png"
+      <a href="https://web.facebook.com/instecupa" target="_blank"><img alt="Siguenos en Facebook" src="./img/facebok.png"
           width=48 height=48 /></a>
 
       <a href="https://www.instagram.com/instecupa/?hl=es" target="_blank"><img alt="Siguenos en Blogger"
-          src="../img/instagram1.png" width=48 height=48 /></a>
+          src="./img/instagram1.png" width=48 height=48 /></a>
     </div>
     <p class="frase">Siguenos en nuestras redes sociales.</p>
     <div class="ubicacion">
